--- a/Black Theme Registration/Regsitration.html
+++ b/Black Theme Registration/Regsitration.html
@@ -21,7 +21,7 @@
         
             <div class="box">
                 <form>
-                    <h1>Registeration Form</h1><br />
+                    <h1>Registration Form</h1><br />
                     <p>Lets get you all set up and begin setting up your profile.</p><br />
                     <div class="input-container">
                         <i class="fa fa-user icon"></i>
