--- a/Modern Signup layout2/signup.html
+++ b/Modern Signup layout2/signup.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="right-container">
-    <div class="card">
+    <div class="card right">
         <h3>SIGN UP</h3>
         <h5>Sign up with your account</h5>
         <i class="fa-brands fa-facebook-square"></i>
